# cvc5

./: .clang-format  .clang-tidy  .cproject  .git-blame-ignore-revs  .gitignore  .mailmap  .project  .style.yapf  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  DESIGN_QUESTIONS  DOC  FFD_README.md  GMP-LICENSE  INSTALL  INSTALL.md  INSTALL.rst  Makefile  Makefile.am  Makefile.builds  Makefile.builds.in  Makefile.in  Makefile.reconf_args  Makefile.subdir  NEWS  NEWS.md  PR_PLAN  README  README.emacs  README.fmf-devel  README.interactive  README.md  README.org  README.smtcomp2010  RELEASE-NOTES  THANKS  (+41 more)
contrib/: .gitignore  Makefile.am  Makefile.in  README  addsourcedir  arm64-gpl.Dockerfile  build-cudd-2.4.2-with-libtool.sh  build-cudd-2.5.0-with-libtool.sh  build-cudd-with-libtool.sh  cluster-qf_lra-benchmark  cluster-qf_lra-full  code-checker  configure-in-place  cross-compile-depedencies.sh  cryptominisat-4.2.0.patch  cryptominisat-4.2.0.second.patch  cut-release  cvc-devel.el  cvc-mode.el  cvc4_strict_smtlib  cvc5-wasm.sh  cvc5_strict_smtlib  debug-keys  depgraph  dimacs_to_smt.pl  editing-with-emacs  extract-strings-and-comments  format-code.sh  get-abc  get-alethe-checker  get-alethe-sigs  get-alf-checker  get-antlr-3.4  get-authors  get-authors.sh  get-bug-attachments  get-cadical  get-carcara-checker  get-cryptominisat  get-cryptominisat4  (+97 more)
contrib/alttheoryskel/: Makefile.am  README.WHATS-NEXT  kinds  theory_DIR.cpp  theory_DIR.h
contrib/casc/: run-script-casc27-fof
contrib/cibw/: before_all_linux.sh  before_all_macos.sh  before_all_windows.sh
contrib/codeql/: IdentifyNodeIdDependentCalls.ql  qlpack.yml
contrib/optionsskel/: DIR_options  DIR_options.toml
contrib/packaging_python/: Readme.md  build.sh  build_wheel.py  create_wheel.sh  mk_build_dir.py  mk_clean_wheel.sh  mk_wheel.py  wrap_configure.py
contrib/theoryskel/: Makefile  Makefile.am  README.WHATS-NEXT  kinds  options  options_handlers.h  theory_DIR.cpp  theory_DIR.h  theory_DIR_rewriter.h  theory_DIR_type_rules.h
contrib/tidy-checks/: CMakeLists.txt  Cvc5TidyModule.cpp  NodeIdDeterminismCheck.cpp  NodeIdDeterminismCheck.h
cryptominisat5/cryptominisat-5.6.3/: .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Dockerfile.web  LICENSE.txt  README.markdown  appveyor.yml  cmsat_tablestructure.sql  cryptominisat5Config.cmake.in
doc/: CMakeLists.txt  Makefile.in  SmtEngine.3cvc4_template.in  SmtEngine.3cvc_template.in  cvc4.1.in  cvc4.1_template.in  cvc4.5.in  find_public_interface.sh  libcvc4.3.in  libcvc4.3_template.in  libcvc4compat.3.in  libcvc4parser.3.in  libcvc5.3.in  mainpage.md  options.3cvc4_template.in  options.3cvc_template.in
docs/: CMakeLists.txt  conf.py  conf.py.in  cpp.rst  index.rst  languages.rst  options.rst  output-tags.rst  references.bib  references.rst  resource-limits.rst  skolem-ids.rst  statistics.rst  theory.rst  tokens.xlsx
docs/_static/: custom.css
docs/api/: CMakeLists.txt  Doxyfile.in  api.rst
docs/binary/: binary.rst  options.rst  output-tags.rst  quickstart.rst  resource-limits.rst  statistics.rst
docs/cpp/: CMakeLists.txt  Doxyfile.in  cpp.rst  datatypedecl.rst  exceptions.rst  kind.rst  op.rst  result.rst  roundingmode.rst  sort.rst  statistics.rst  term.rst
docs/examples/: bags.rst  bitvectors.rst  bitvectors_and_arrays.rst  combination.rst  datatypes.rst  examples.rst  exceptions.rst  extract.rst  finite_field.rst  floatingpoint.rst  helloworld.rst  lineararith.rst  parser.rst  parser_sym_manager.rst  quickstart.rst  relations.rst  sequences.rst  sets.rst  strings.rst  sygus-fun.rst  sygus-grammar.rst  sygus-inv.rst  sygus-weight.rst  uf.rst
docs/ext/: autoenum.py  examples.py  include_build_file.py  run_command.py  smtliblexer.py
docs/installation/: installation.rst
docs/proofs/: output_alethe.rst  output_alf.rst  output_cpc.rst  output_dot.rst  output_lean.rst  output_lfsc.rst  output_lsfc.rst  proof_rules.rst  proofs.rst
docs/python/: CMakeLists.txt  datatype.rst  python.rst
docs/theories/: bags.rst  datatypes.rst  finite_field.rst  separation-logic.rst  sequences.rst  sets-and-relations.rst  strings.rst  theories.rst  transcendentals.rst
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  README  README.md  SimpleVC.java  SimpleVC.ml  SimpleVC.php  SimpleVC.pl  SimpleVC.py  SimpleVC.rb  SimpleVC.tcl  SimpleVCCompat.java  simple_vc_compat_c.c  simple_vc_compat_cxx.cpp  simple_vc_cxx.cpp  simple_vc_quant_cxx.cpp  translator-example-input.smt2  translator.cpp
examples/api/: CMakeLists.txt  Makefile  Makefile.am  bitvectors-new.cpp  bitvectors.cpp  bitvectors_and_arrays-new.cpp  bitvectors_and_arrays.cpp  combination-new.cpp  combination.cpp  datatypes-new.cpp  datatypes.cpp  extract-new.cpp  extract.cpp  helloworld-new.cpp  helloworld.cpp  linear_arith-new.cpp  linear_arith.cpp  sequences.cpp  sets-new.cpp  sets.cpp  strings-new.cpp  strings.cpp  sygus-fun.cpp  sygus-grammar.cpp  sygus-inv.cpp  sygus.cpp  utils.cpp
examples/cvc5_web/: README.md
examples/hashsmt/: CMakeLists.txt  Makefile  Makefile.am  sha1.hpp  sha1_collision.cpp  sha1_inversion.cpp  sha1smt.cpp  word.cpp  word.h
examples/nra-translate/: CMakeLists.txt  Makefile  Makefile.am  normalize.cpp  nra-translate-example-input.smt2  smt2info.cpp  smt2todreal.cpp  smt2toisat.cpp  smt2tomathematica.cpp  smt2toqepcad.cpp  smt2toredlog.cpp
examples/sets-translate/: CMakeLists.txt  Makefile  Makefile.am  sets-translate-example-input.smt2  sets_translate.cpp
proofs/lfsc_checker/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  Makefile.am  NEWS  README  check.cpp  check.h  chunking_memory_management.h  code.cpp  configure.ac  expr.cpp  expr.h  libwriter.cpp  libwriter.h  main.cpp  position.h  print_smt2.cpp  print_smt2.h  scccode.cpp  scccode.h  sccwriter.cpp  sccwriter.h  (+2 more)
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.theories  PR_PLAN  README  cvc4.i  fix-install-headers.sh  g.dot  g.ps  mksubdirs
test/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  no_cxxtest
(+17008 files in other folders)
